fix: Landing top collections overflow

--- a/styles/components/_top-collections.scss
+++ b/styles/components/_top-collections.scss
@@ -9,6 +9,12 @@
     grid-auto-flow: column;
   }
 
+  @media (min-width: 1540px) {
+    grid-template-rows: repeat(4, minmax(0, 1fr));
+    width: 110%;
+    margin-left: -5%;
+  }
+
   .top-collections-item {
     background-color: white;
     color: black;
